# Image-Classification---MNIST

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test_action.yaml
myenv/Scripts/: activate  activate.bat
src/mynet/: dataset.py  main.py  model.py  utils.py
tests/: test_dataset.py  test_evaluate_one_epoch.py  test_network.py  test_train_and_evaluate_model.py  test_train_one_epoch.py
