[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dlcv"
version = "0.0.1"
authors = [
  { name="Arno Nhym", email="arno.nhym@uni-weimar.de" },
]
description = "First DLCV example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "pytest",
    "tqdm",
    "pandas"
]